5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1601_588.log
== TEST (2019-03-25 18:34:13) 
-- CODE:
# ENTRADA 
VAR = int(input("Qual o valor do saque? "))
# NOTAS DE 100
notas100 = VAR // 100 
# Valor restante a ser sacado com notas menores que R$ 100
resto100 = VAR % 100
# Quantidade de notas de R$ 50
notas50 = resto100 // 50
# Valor restante a ser sacado com notas menores que R$ 100
resto50 = resto100 % 50
# Quantidade de notas de R$ 10
notas109 = resto50 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:34:31) 
-- CODE:
# ENTRADA 
VAR = int(input("Qual o valor do saque? "))
# NOTAS DE 100
notas100 = VAR // 100 
# Valor restante a ser sacado com notas menores que R$ 100
resto100 = VAR % 100
# Quantidade de notas de R$ 50
notas50 = resto100 // 50
# Valor restante a ser sacado com notas menores que R$ 100
resto50 = resto100 % 50
# Quantidade de notas de R$ 10
notas10 = resto50 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:37:10) 
-- CODE:
# ENTRADA 
VAR = int(input("Qual o valor do saque? "))
# NOTAS DE 100
notas100 = VAR // 100 
# Valor restante a ser sacado com notas menores que R$ 100
resto100 = VAR % 100
# Quantidade de notas de R$ 50
notas50 = resto100 // 50
# Valor restante a ser sacado com notas menores que R$ 100
resto50 = resto100 % 50
# Quantidade de notas de R$ 10
notas10 = resto50 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- EXECUTION TIME:
0.178356
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:54:16) 
-- CODE:
# ENTRADA 
VAR = int(input("Qual o valor do saque? "))
# NOTAS DE 100
notas100 = VAR // 100 
# Valor restante a ser sacado com notas menores que R$ 100
resto100 = VAR % 100
# Quantidade de notas de R$ 50
notas50 = resto100 // 50
# Valor restante a ser sacado com notas menores que R$ 100
resto50 = resto100 % 50
# Quantidade de notas de R$ 10
notas10 = resto50 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- EXECUTION TIME:
0.202007
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:22:38) 
-- CODE:
# ENTRADA 
VAR = int(input("Qual o valor do saque? "))
# NOTAS DE 100
notas100 = VAR // 100 
# Valor restante a ser sacado com notas menores que R$ 100
resto100 = VAR % 100
# Quantidade de notas de R$ 50
notas50 = resto100 // 50
# Valor restante a ser sacado com notas menores que R$ 100
resto50 = resto100 % 50
# Quantidade de notas de R$ 10
notas10 = resto50 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- EXECUTION TIME:
0.132277
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
